--- a/.github/workflows/build_md_book.yml
+++ b/.github/workflows/build_md_book.yml
@@ -12,7 +12,6 @@ permissions:
   id-token: write
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     env:
@@ -24,21 +23,11 @@ jobs:
           curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf -y | sh
           rustup update
           cargo install --version ${MDBOOK_VERSION} mdbook
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v3
       - name: Build with mdBook
         run: mdbook build
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: ./book
-
-  # Open PR job
-  open-pr:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v3
-      - name: Download artifact
-        uses: actions/download-pages-artifact@v2
       - name: Open PR
         uses: peter-evans/create-pull-request@v3
         with:
@@ -52,3 +41,4 @@ jobs:
           delete-branch: true
           labels: mdbook
           assignees: Em3c2
+      
