--- a/.github/workflows/build_md_book.yml
+++ b/.github/workflows/build_md_book.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Open PR
         uses: peter-evans/create-pull-request@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.SECRET_TOKEN }}
           commit-message: Update book contents
           title: Update book contents
           body: |
